# atmos-casper

./: .gitignore  README.md  package-lock.json  package.json  test-verify.mjs  vercel.json
backend/: .env.example  find-hash.mjs  package-lock.json  package.json
backend/src/: server.ts
backend/src/services/: ai.ts  casper.ts
backend/src/utils/: logger.ts
contracts/atmos-passport/: Cargo.toml
contracts/atmos-passport/src/: carbon_credit.rs  main.rs
frontend/: index.html  package-lock.json  package.json
frontend/api/: index.ts
frontend/api/src/: server.ts
frontend/api/src/services/: atmos-score.ts  passport.ts  satellite.ts
frontend/src/: App.tsx  index.css
frontend/src/pages/: AIAnalyst.tsx  AgentMCP.tsx  Dashboard.tsx  Explorer.tsx  PassportViewer.tsx
